// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";
package thanos;

import "store/storepb/types.proto";
import "store/labelpb/types.proto";

option go_package = "exemplarspb";

/// Exemplars represents API that is responsible for gathering exemplars and their states.
service Exemplars {
    /// Exemplars has info for all exemplars.
    /// Returned exemplars are expected to include external labels.
    rpc Exemplars(ExemplarsRequest) returns (stream ExemplarsResponse);
}

message ExemplarsRequest {
    string query = 1;
    int64 start = 2;
    int64 end = 3;
    PartialResponseStrategy partial_response_strategy = 4;
}

message ExemplarsResponse {
    oneof result {
        ExemplarData data = 1;
        string warning = 2;
    }
}

message ExemplarData {
    // @gotags: json:"seriesLabels"
    LabelSet seriesLabels = 1;
    // @gotags: json:"exemplars"
    repeated Exemplar exemplars = 2;
}

message Exemplar {
    // @gotags: json:"labels"
    LabelSet labels = 1;
    // @gotags: json:"value"
    double value = 2;
    // @gotags: json:"timestamp"
    int64 ts = 3;
}
